<resources>
    <string name="app_name" translatable="false">ElorChat</string>
    <string name="nav_open" translatable="false">Open Navigator Drawer</string>
    <string name="nav_close" translatable="false">Close Navigator Drawer</string>

    <string name="filter">Filtrate</string>
    <string name="views">Views</string>
    <string name="forgottenPassword">I have forgotten my password</string>

    <string name="emailString">EMAIL</string>
    <string name="phoneString">PHONE</string>
    <string name="dniString" translatable="false">DNI</string>
    <string name="directionString">DIRECTION</string>
    <string name="confirmButtonString">CONFIRM</string>
    <string name="passString">PASSWORD</string>
    <string name="repeatPassString">REPEAT PASSWORD</string>
    <string name="cycleString">CYCLE</string>
    <string name="btn_connect">CONNECT</string>
    <string name="btn_send_message">SEND</string>
    <string name="inputMessage">INPUT YOUR MESSAGE</string>
    <string name="courseString">COURSE</string>
    <string name="fctDualString" translatable="false">FCT/DUAL</string>
    <string name="rememberMe">Remember Me</string>
    <string name="acceptButtonString">Accept</string>
    <string name="register">Register</string>
    <string name="nameString">NAME</string>
    <string name="surnameString">SURNAME</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="email_change">Change Email</string>
    <string name="pass_change">Change Password</string>
    <string name="returnToLogin">Return</string>
    <string name="find">Find</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_email">Confirm New Email</string>
    <string name="btn_change_email">Change Email</string>
    <string name="password_input_description">Password input field</string>
    <string name="login_icon_description">Login icon</string>
    <string name="email_input_description">Description for email input</string>
    <string name="views_count_label">Views:</string>
    <string name="favorite_button_description">Add to Favorites</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dual" translatable="false">DUAL</string>
    <string name="fct" translatable="false">FCT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="private_group">PRIVATE</string>
    <string name="public_group">PUBLIC</string>
    <string name="settings">SETTINGS</string>
    <string name="confirm_logout_title">Logout</string>
    <string name="confirm_logout_message">Are you sure you want to log out?</string>
    <string name="positive_button_yes">Yes</string>
    <string name="negative_button_no">No</string>
    <string name="closing_session">Closing session...</string>
    <string name="account_settings">Account Settings</string>
    <string name="member_since">Member since:</string>
    <string name="usersurname">UserSurname</string>
    <string name="username">UserName</string>
    <string name="role">Role</string>
    <string name="close_session">Close Session</string>
    <string name="select_language">Select Language</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="image_for_attaching_files">Image for attaching photos, files, and locations in the message</string>
    <string name="leave_chat">Leave Chat</string>
    <string name="send_message">Send Message</string>
    <string name="say_something">Say something...</string>
    <string name="group_name">Group Name</string>
    <string name="create_group">Create Group</string>
    <string name="button_to_create_chat_groups">Button to create chat groups</string>
    <string name="group_image">Group image</string>
    <string name="this_is_this_group_s_last_message">This is this group\'s last message</string>
    <string name="join">Join</string>
    <string name="user_icon">User Icon</string>
    <string name="enter_your_icon">Enter your icon</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm_your_name">Confirm your name</string>
    <string name="confirm_your_surnames">Confirm your surnames</string>
    <string name="confirm_your_phone_number">Confirm your phone number</string>
    <string name="confirm_your_dni_id">Confirm your DNI~ID</string>
    <string name="confirm_your_direction_of_residence">Confirm your direction of residence</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="repeat_your_new_password">Repeat your new password</string>
    <string name="cycle_name">Cycle name</string>
    <string name="year_to_course">Year to course</string>
    <string name="internship_type">Internship type</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="basque">Basque</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="select_app_mode">Select App Mode</string>
    <string name="send_photo">Send Photo</string>
    <string name="send_coordinates">Send GPS Coordinates</string>
    <string name="send_file">Send File</string>
    <string name="add_user">Add User</string>
    <string name="kick_user">Kick User</string>
    <string name="returnButton">RETURN</string>
    <string name="Delete_Group">Delete Group</string>

</resources>