<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        app:title="@string/app_name" />

    <!-- Place the "Leave Chat" Button on the Upper-Right -->
    <Button
        android:id="@+id/leaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/leave_chat"
        android:background="@drawable/rounded_button"
        android:padding="10dp"
        android:textColor="@android:color/holo_red_dark" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/input_layout"
        android:layout_below="@+id/toolbar"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"></androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLightGray"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <ImageView
            android:id="@+id/addMessageImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_background"
            android:contentDescription="@string/image_for_attaching_files"
            android:src="@drawable/baseline_add_24" />

        <EditText
            android:id="@+id/input_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/edit_text_shadow"
            android:hint="@string/say_something"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#757575" />

        <ImageView
            android:id="@+id/btn_send_message"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_background"
            android:contentDescription="@string/send_message"
            android:enabled="false"
            android:src="@drawable/outline_send_24" />

    </LinearLayout>

</RelativeLayout>